backend - modify jwt
